@@ -1,13 +1,52 @@
 package ex04;
 
+/**
+ * Did you know that you can use frequency analysis to decipher poorly encrypted texts?
+See https://en.wikipedia.org/wiki/Frequency_analysis
+Feel like a hacker and implement a program for counting a character occurrences in a text.
+We like visual clarity. This is why the program will display the results in a histogram. 
+This chart will show 10 most frequently occurring characters in descending order.
+
+If letters are encountered the same number of times, they should be sorted in a lexicographic order.
+Each character may occur in text a great number of times. For that reason, the chart should be scalable. 
+The maximum height of the displayed chart is 10, and the minimum is 0.
+Input data for the program is a string with a single "\n" character at the end (thus, a single long string can be used as input).
+It is assumed that each input character can be contained in a char variable (Unicode BMP; for example, the code of letter "S" is 0053, maximum code value is 65535).
+
+The maximum number of character occurrences is 999.
+
+Note: this problem must be solved without multiple iterations over the source text (sorting and removing repetitions), 
+because these methods will significantly slow down the application. Use other information processing methods.
+Example of program operation:
+
+$ java Program
+
+-> AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAASSSSSSSSSSSSSSSSSSSSSSSSDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDWEWWKFKKDKKDSKAKLSLDKSKALLLLLLLLLLRTRTETWTWWWWWWWWWWOOOOOOO42
+
+ 36
+  #  35
+  #   #
+  #   #  27
+  #   #   #
+  #   #   #
+  #   #   #
+  #   #   #  14  12
+  #   #   #   #   #   9
+  #   #   #   #   #   #   7   4
+  #   #   #   #   #   #   #   #   2   2
+  D   A   S   W   L   K   O   T   E   R
+ */
+
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class Program {
     public static final int NUMBER_LETTERS = 10;
+
     public static void main(String[] args) {
         Scanner scanner = new Scanner(System.in);
-        String input_data = scanner.nextLine();
-        char[] letters = input_data.toCharArray();
+        String inputData = scanner.nextLine();
+        char[] letters = inputData.toCharArray();
         Map<Character, Integer> letterCounts = new HashMap<>();
         for (char letter : letters) {
             if (letterCounts.containsKey(letter)) {
@@ -15,13 +54,17 @@ public class Program {
             } else {
                 letterCounts.put(letter, 1);
             }
-        }        
+        }
         scanner.close();
         getStatistics(letterCounts);
     }
 
     private static void getStatistics(Map<Character, Integer> letterCounts) {
-        List<Integer> values = letterCounts.values().stream().sorted(Comparator.reverseOrder()).limit(NUMBER_LETTERS).toList();
+        List<Integer> values = letterCounts.values()
+                .stream()
+                .sorted(Comparator.reverseOrder())
+                .limit(NUMBER_LETTERS)
+                .collect(Collectors.toList());
         int max = values.get(0);
         double step = max * 1.0 / 10;
         List<String> letters = new ArrayList<>();
@@ -36,7 +79,7 @@ public class Program {
             lettersCurrentCounted.sort(Comparator.naturalOrder());
             for (int j = 0; j < lettersCurrentCounted.size() && i < NUMBER_LETTERS; j++) {
                 letters.add(lettersCurrentCounted.get(j));
-                steps.add((int)Math.floor(values.get(i)/ step));
+                steps.add((int) Math.floor(values.get(i) / step));
                 if (lettersCurrentCounted.size() > 1 && j < lettersCurrentCounted.size() - 1) {
                     i++;
                 }
@@ -76,18 +119,18 @@ public class Program {
 }
 
 /*
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAASSSSSSSSSSSSSSSSSSSSSSSSDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDWEWWKFKKDKKDSKAKLSLDKSKALLLLLLLLLLRTRTETWTWWWWWWWWWWOOOOOOO42
-
- 36
-  #  35
-  #   #
-  #   #  27
-  #   #   #
-  #   #   #
-  #   #   #
-  #   #   #  14  12
-  #   #   #   #   #   9
-  #   #   #   #   #   #   7   4
-  #   #   #   #   #   #   #   #   2   2
-  D   A   S   W   L   K   O   T   E   R
+ * AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAASSSSSSSSSSSSSSSSSSSSSSSSDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDWEWWKFKKDKKDSKAKLSLDKSKALLLLLLLLLLRTRTETWTWWWWWWWWWWOOOOOOO42
+ * 
+ * 36
+ * # 35
+ * # #
+ * # # 27
+ * # # #
+ * # # #
+ * # # #
+ * # # # 14 12
+ * # # # # # 9
+ * # # # # # # 7 4
+ * # # # # # # # # 2 2
+ * D A S W L K O T E R
  */
